<resources>
    //login
    <string name="app_name">Terry</string>
    <string name="login_text">用户登录</string>
    <string name="checkbox_text">记住密码</string>
    <string name="username_text">用 户:</string>
    <string name="input_user_text">用户名</string>
    <string name="key_text">密 码:</string>
    <string name="input_key_text">密码</string>
    <string name="rem_psw">记住密码</string>
    <string name="forget_key">修改密码</string>
    <string name="register_button">注册</string>
    <string name="login_button">登录</string>

    <string name="message1">账号或者密码不能为空</string>
    <string name="message2">保存成功</string>

    //register
    <string name="register_surface">用户注册</string>
    <string name="identity_text">账 号:</string>
    <string name="input_identity_text">用户名</string>
    <string name="phone_text">手机号:</string>
    <string name="input_phone_text">请输入手机号</string>
    <string name="password_text">密 码:</string>
    <string name="input_password_text">密码</string>
    <string name="password02_text">密 码:</string>
    <string name="input_password02_text">请再次输入密码</string>
    <string name="surface2_register_button">注册</string>
    <string name="surface_back_button">返回</string>
    <string name="register_message">注册成功!</string>
    <string name="surface2_message">不能为空!</string>

    //success
    <string name="log_success">登陆成功!</string>
    <string name="exit">确 认</string>
    <string name="reg_success">注册成功</string>

    //change
    <string name="change_text">修改密码</string>
    <string name="change_key">密 码:</string>
    <string name="change_old">请输入旧密码</string>
    <string name="change_new">请输入新密码</string>
    <string name="change_affirm_button">确认</string>
    <string name="change_back_button">返回</string>

    //main
    <string name="main_information">Terry</string>
    <string name="main_message">消息</string>
    <string name="main_linkman">联系人</string>
    <string name="main_personalhome">个人主页</string>
    <string name="main_log_off">注 销</string>

    <string name="title_message">信息</string>
    <string name="title_linkman">联系人</string>
    <string name="title_personalhome">个人主页</string>

</resources>