<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_surface"
            android:textSize="40dp"
            android:layout_gravity="center"
    />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identity_text"
                android:textSize="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"/>

        <EditText
                android:id="@+id/input_identity_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:singleLine="true"
                android:hint="@string/input_user_text"
                android:imeOptions="actionNext"
                android:nextFocusForward="@string/input_password_text"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textSize="30dp"
                android:layout_marginLeft="30dp"/>

        <EditText
                android:id="@+id/input_password_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:singleLine="true"
                android:password="true"
                android:hint="@string/input_password_text"
                android:imeOptions="actionNext"
                android:nextFocusForward="@string/password02_text"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password02_text"
                android:textSize="30dp"
                android:layout_marginLeft="30dp"/>

        <EditText
                android:id="@+id/input_password02_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:singleLine="true"
                android:password="true"
                android:hint="@string/input_password02_text"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="90dp">
        <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/surface2_register_button"/>
        <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/surface_back_button"/>

    </LinearLayout>

</LinearLayout>
